@@ -99,6 +99,8 @@ public:
      * @param hierarchy The element selecting list.
      */
     virtual void StoreCaretLocationUpdate( const QList< ElementIndex > &hierarchy ) = 0;
+
+    virtual bool IsLoadingFinished() = 0;
 };
 
 #endif // VIEWEDITOR_H
