@@ -1,4 +1,5 @@
 ﻿Sigil v0.2.0 RC1 ADD_DATE
+    - implemented component-wide search&replace for Code View searches (issue #372)
     - the Find&Replace dialog now remembers up to 20 previously used search and replace strings
     (issue #369)
     - fixed an issue with positive regex lookaheads in normal Replace (not ReplaceAll) (issue #261) 
